[package]
name = "implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
chrono = "0.4.38"
squareup = "2.12.3"
hifitime = "4.0.2"
uuid = { version = "1.12.1", features = ["v4"] }
futures = { version = "0.3.31", features = ["alloc"]}